fix: fixed tests and improved coverage + refactored toSnapshot()